[tool.poetry]
name = "taiwancdc"
version = "0.1.0"
description = ""
authors = ["tasi788 <tdc@tdccc.com.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^6.0.8"
requests = "^2.26.0"
html2text = "^2020.1.16"
tinydb = "^4.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
